--- a/styles/partners.css
+++ b/styles/partners.css
@@ -63,10 +63,13 @@
 
 .card-imagem-destaque {
     padding: 0;
+    background-color: var(--alpendre);
     overflow: hidden;
     border-radius: 25px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
     transition: transform 0.3s ease;
+    align-items: center;
+    align-content: center;
 }
 
 .card-imagem-destaque:hover {
@@ -76,6 +79,7 @@
 .recorte-parceiro img {
     width: 100%;
     height: 100%;
+    border-radius: 50px;
     object-fit: cover;
     display: block;
     transition: transform 0.5s ease;
